--- a/src/css/estilo.css
+++ b/src/css/estilo.css
@@ -80,14 +80,27 @@ span{
 
 #titulo{
     display: flex;
-    justify-content: center;}
+    justify-content: center;
+    font-size: 3rem;
+}
 
-    /*Responsividade*/
-    @media(width <=1024px){
-        .header-menu{
-            width: 100%;
-            height: 100vh;
-            background: var(--color-font2);
-            position: relative;
-        }
-    }
+/* RESPONSIVIDADE */
+
+@media(width <= 1024px){
+  
+.header-menu{
+    width: 100%;
+    height: 100vh;
+    background: var(--color-font4);
+    position: absolute;
+    z-index:1;
+    top:0;
+    left: -100%;
+    gap:0;
+    text-align: center;
+    flex-direction: column;
+    justify-content: center;
+}
+#titulo{
+    font-size: 2rem;
+}
