--- a/src/css/estilo.css
+++ b/src/css/estilo.css
@@ -50,7 +50,7 @@ a:hover{
     width: 100%;
     min-height: 100vh;
     padding: 3rem;
-    background-image: var(--gradient), url(../assets/imagem1.jpg);
+    background-image: var(--gradient), url(../assets/imagem2.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     color:var(--color-font1);
@@ -84,10 +84,25 @@ span{
     font-size: 3rem;
 }
 
+.hamburguer{
+    display: none;
+    position: relative;
+    cursor: pointer;
+}
+
+.barra{
+    display: block;
+    width: 3rem;
+    height: .3rem;
+    background: var(--color-font1);
+    margin: 0.5rem auto;
+    border-radius: 5px;
+    transition: .5s;
+}
+
 /* RESPONSIVIDADE */
 
 @media(width <= 1024px){
-  
 .header-menu{
     width: 100%;
     height: 100vh;
@@ -96,11 +111,37 @@ span{
     z-index:1;
     top:0;
     left: -100%;
-    gap:0;
+    gap:6rem;
     text-align: center;
     flex-direction: column;
     justify-content: center;
+    transition: .5s;
 }
+
+
 #titulo{
     font-size: 2rem;
+}
+/*Menu Hamburguer*/
+
+.active{
+    left: 0;
+}
+
+.hamburguer{
+    display: block;
+    z-index: 2;
+}
+
+.hamburguer.active .barra:first-child{
+    transform: translateY(8px) rotate(360deg) rotate(45deg);
+}
+.hamburguer.active .barra:nth-child(2){
+    opacity: 0;
+}
+.hamburguer.active .barra:last-child{
+    transform:translateY(-8px) rotate(-360deg) rotate(-45deg);
+}
+
+
 }
