--- a/src/css/estilo.css
+++ b/src/css/estilo.css
@@ -107,7 +107,7 @@ span{
 .header-menu{
     width: 100%;
     height: 100vh;
-    background: var(--color-font4);
+    background: var(--gradient);
     position: absolute;
     z-index:1;
     top:0;
@@ -121,6 +121,7 @@ span{
 .item-menu{
     color: #fff;
 }
+
 
 
 #titulo{
